--- a/css/tipografia/tipografia.css
+++ b/css/tipografia/tipografia.css
@@ -13,12 +13,23 @@
 }
 
 
+.font-1-g {
+  font:1.6em "Quicksand", sans-serif;
+  letter-spacing: 5px;
+
+}
+
 .font-2 {
    font: 2.8em "Allura", serif !important;
   line-height: 1 !important;
 
 }
 
+.font-2-m {
+  font: 2em "Allura", serif !important;
+ line-height: 1 !important;
+
+}
 
 
 
