--- a/css/home/home.css
+++ b/css/home/home.css
@@ -36,7 +36,8 @@ padding-bottom: 20px;
 
 .envelope{
 width: 100%;
-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
+box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.5);
+background-color: #9BAC76;
 }
 
 .link_envelope{
@@ -47,15 +48,16 @@ box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
 
 .data{
 
-width: max-content;
-margin: 0 auto;
-color: #686F51;
-display: flex ;
+display: flex;
 align-items: center;
 justify-content: center;
-box-shadow: 0px 2px 2px -2px rgba(0, 0, 0, 0.3), 0px -2px 2px -2px rgba(0, 0, 0, 0.5);
-padding-top: 2px;
-padding-bottom: 2px;
+padding-left: 20px;
+padding-right: 20px;
+}
+
+.data img{
+  width: 100%;
+  max-width: 450px;
 }
 
 
